add testDeleteWithCondition test
and minor Integer.valueOf fix